[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-plan"
version = "1.0.0"
dependencies = [
    "pygit2~=1.11",
    "importlib-resources==5.9.0",
]
authors = [
  { name="Rex Garland", email="rex@rexgarland.dev" },
]
description = "project planning in markdown"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/rexgarland/markdown-plan"

[project.scripts]
mdplan = "mdplan.__main__:main"

[project.optional-dependencies]
tests = [
    "pytest",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mdplan.data" = ["*"]


