[metadata]
name = markdown-plan-rexgarland
version = 0.0.3
author = Rex Garland
author_email = rex.garland@gmail.com
description = Markdown project planning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rexgarland/markdown-plan
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mdplan = mdplan:main